Fixed overflow-x

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -164,4 +164,9 @@
     footer a {
         text-decoration: none;
     }
+    footer a:hover {
+        transition: all 0.5s;
+        color: #A88924;
+        border-bottom: 1px solid rgba(168, 137, 36, 1);
+    }
 }
