--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
+
     html {
-        overflow-x: hidden;
+        box-sizing: border-box;
     }
-    
     body {
         margin: 0;
         padding: 0;
@@ -69,7 +69,7 @@
     #container-hero {
         display: flex;
         margin-top: 10px;
-        max-width: 100vw;
+        max-width: 100%;
     }
     
     #hero-image {
@@ -77,7 +77,7 @@
         background-size: cover;
         width: 99vw;
         height: 400px;
-        max-width: 100vw;
+        max-width: 100%;
     }
     
     #hero-content {
@@ -89,7 +89,7 @@
         align-items: center;
         justify-content: center;
         box-shadow: 0 0 2px #666666;
-        max-width: 100vw;
+        max-width: 100%;
     }
     
     h1 {
@@ -129,7 +129,7 @@
     
     .mobile-hidden {
         display: none;
-        max-width: 100vw;
+        max-width: 100%;
     }
     
     #container-links>a {
@@ -192,6 +192,7 @@
     .product img {
         box-shadow: 0 0px 2px #A88924;
         width: 330px;
+        max-width: 100%;
     }
     
     .product div {
@@ -250,7 +251,7 @@
     .product-CTA:active {
         box-shadow: 0 0 4px white inset;
     }
-    
+
     .product-info {
         border: 1px solid #D3AE36;
         padding: 5%;
@@ -271,7 +272,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100vw;
+        width: 100%;
         margin-bottom: 30px;
     }
     /* PROMOTION */
@@ -279,15 +280,15 @@
     #container-promotion {
         display: flex;
         margin-top: 10px;
-        max-width: 100vw;
+        max-width: 100%;
     }
     
     #promotion-image {
         background-image: url(../images/promo.jpg);
         background-size: cover;
         background-attachment: scroll;
-        width: 100vw;
-        max-width: 100vw;
+        width: 100%;
+        max-width: 100%;
         margin-top: 5%;
         box-shadow: 0 0 2px #666666;
     }
@@ -300,7 +301,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        max-width: 100vw;
+        max-width: 100%;
     }
     
     #promotion-content p {
@@ -389,25 +390,16 @@
         list-style-type: none;
     }
     
-    .fa-facebook-f {
-        padding-right: 6px;
-    }
-    
-    .fa-instagram {
-        padding-right: 4px;
-    }
-    
+
+    .fab,
     .fa-twitter,
     .fa-facebook-f,
     .fa-instagram {
         color: #A88924;
+        width: 20px;
     }
     
-    footer a:hover {
-        transition: all 0.5s;
-        color: #A88924;
-        border-bottom: 1px solid rgba(168, 137, 36, 1);
-    }
+
     /* ANCHOR */
     
     #anchor-image {
